manifests/70-pvc-demo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: writer
  namespace: demo
spec:
  containers:
    - name: writer
      image: busybox:1.36
      command: ["sh","-c","echo 'data survives pod restarts' > /data/note.txt && sleep 3600"]
      volumeMounts:
        - { name: vol, mountPath: /data }
  volumes:
    - name: vol
      persistentVolumeClaim: { claimName: data }
